# local-llm-1

./: .gitignore  README.md  app.py  download_models.py  pyproject.toml  tts.py
