[project]
name = "local-talking-llm"
version = "0.1.0"
description = "Local voice assistant with Supertonic TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Supertonic TTS (ONNX-based, lightweight)
    "onnxruntime>=1.19.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "pyyaml>=6.0",
    # Speech-to-Text (faster-whisper is 4x faster than openai-whisper)
    "faster-whisper>=1.0.0",
    # Audio I/O
    "sounddevice>=0.5.2",
    # Voice Activity Detection
    "webrtcvad>=2.0.10",
    "setuptools",  # Required by webrtcvad for pkg_resources
    # LLM Integration
    "langchain>=0.3.25",
    "langchain-core>=0.3.62",
    "langchain-openai>=0.3.0",
    # CLI and UI
    "rich>=14.0.0",
    # NLP utilities
    "nltk>=3.9.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
